# my_rust_workspace

./: Cargo.toml  README.md  main.rs
my_math_package/: Cargo.toml
my_math_package/bin_exe_complex/: Cargo.toml  main.rs
my_math_package/bin_exe_vec3/: Cargo.toml  main.rs
my_math_package/lib_src_math/: lib.rs  macros.rs  struct_complex.rs  struct_vec3.rs  traits.rs
my_math_package/lib_test_math/: test_complex.rs  test_vec3.rs
my_stats_package/: main.rs
my_stats_package/bin_exe_machine_learning/: Cargo.toml  main.rs
my_stats_package/bin_exe_statistics/: Cargo.toml  main.rs
my_stats_package/lib_src_stats/: struct_machine_learning.rs  struct_statistics.rs
my_stats_package/lib_test_stats/: test_machine_learning.rs  test_stats.rs
