[package]
name = "my_math_package"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_math"
path = "lib_src_math/lib.rs"

[[bin]]
name = "bin_exe_complex"
path = "bin_exe_complex/main.rs"

[[bin]]
name = "bin_exe_vec3"
path = "bin_exe_vec3/main.rs"

[dependencies]
# Add any dependencies your package requires here
